Netdiscover 0.3-beta7 (Currently working on it)
   * Larry Reznick <lreznick@rezfam.com>: oui script fixes for redhat and code 
     reformatting to make it more readable including manpage
   * Emanuele Acri <crossbower@gmail.com>: Libnet injection replaced by pcap
   * Frantisek Hanzlik <franta@hanzlici.cz>: oui script speed drastically
     improved
   * Janusz Uzycki <j.uzycki@elproma.com.pl>: Scroll page up/down feature added
   * Janusz Uzycki <j.uzycki@elproma.com.pl>: Known hosts list feature
   * Janusz Uzycki <j.uzycki@elproma.com.pl>: Fix for undefined docdir
   * Several variable naming changes
   * Autotools scripts updated
   * Fixed scroll limits & some screen improvements
   * Fixed crash when freeing common ranges list at end of scan
   * New data abstraction layer added to handle diferent view modes
   * Included script to update oui database.
   * Added custom pcap filter option. Patch by Gustavo Chain.
   * Some code layout clean.
   * Several fixes to avoid potential buffer overflows. Patch by Alex.
   * fhandle.c fixed to be able to handle ms-dos line format. Patch by Alex.
   * Some ranges not working through -r option fixed. Patch by Alex.
   * Improved network addresses sanity checks, thanks to Alex.
   * Netmask will be setup to /24 by default if its omited, thanks to Alex.
   * Added .2 .200 hosts to be scanned on fast mode, thanks again to Alex.
   * Some unnecessary mallocs where removed to prevent memory leaks,
     thanks to Alex (SuD) for the patch.
   * Hang when "h" is pressed twice fixed
   * Madriva and RedHat rpm .spec files added, thanks to Francis Giraldeau
     and Guillaume Pratte for the contribution
   * Buffer overflow on search_vendor fixed, thanks to Guillaume Pratte
   * Solaris bus error when freeing a pointer returned by getenv fixed
   * Added parsable output thanks to Guillaume Pratte for the patch
   * Added support to read ranges from a given file using -l switch